[package]
name = "brine"
version = "0.1.0"
authors = ["Matthieu Felix <matthieufelix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
log = "0.4"
saltwater-parser = { path = "../saltwater-parser", features = ["codegen"] }
