[package]
name = "brine"
version = "0.1.0"
authors = ["Matthieu Felix <matthieufelix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
itertools = "0.9"
lasso = "0.2"
lazy_static = "1"
lexpr = "0.2"
log = "0.4"
rustyline = "7.0"
saltwater-parser = { path = "../saltwater-parser", features = ["codegen"] }
serde = { version = "1.0", features = ["derive"] }
serde-lexpr = "0.1"

[[bin]]
name = "miri"
path = "src/bin/miri.rs"
